--- a/mmatt-SABnzbd/umbrel-app.yml
+++ b/mmatt-SABnzbd/umbrel-app.yml
@@ -1,27 +1,27 @@
 manifestVersion: 1
-id: sparkles-hello-world
-name: Hello World
-tagline: Replace this tagline with your app's tagline
+id: mmatt-SABnzbd
+name: SABnzbd
+tagline: Free and easy binary newsreader
 icon: https://svgur.com/i/mvA.svg
 category: Development
 version: "1.0.0"
-port: 4000
+port: 8080
 description: >-
   Add your app's description here.
 
 
   You can also add newlines!
 
-developer: Umbrel
-website: https://umbrel.com
-submitter: Umbrel
+developer: SABnzbd
+website: https://sabnzbd.org/
+submitter: mmatt
 submission: https://github.com/getumbrel/umbrel-hello-world-app
 repo: https://github.com/getumbrel/umbrel-hello-world-app
 support: https://github.com/getumbrel/umbrel-hello-world-app/issues
 gallery:
-  - https://i.imgur.com/yyVG0Jb.jpeg
-  - https://i.imgur.com/yyVG0Jb.jpeg
-  - https://i.imgur.com/yyVG0Jb.jpeg
+  - https://sabnzbd.org/images/landing/screenshots/interface.png
+  - https://sabnzbd.org/images/landing/screenshots/history-details.png
+  - https://sabnzbd.org/images/landing/screenshots/file-lists.png
 releaseNotes: >-
   Add what's new in the latest version of your app here.
 dependencies: []
