--- a/mmatt-SABnzbd/umbrel-app.yml
+++ b/mmatt-SABnzbd/umbrel-app.yml
@@ -1,5 +1,5 @@
 manifestVersion: 1
-id: mmatt-SABnzbd
+id: mmatt-sabnzbd
 name: SABnzbd
 tagline: Free and easy binary newsreader
 icon: https://svgur.com/i/mvA.svg
