--- a/mmatt-SABnzbd/docker-compose.yml
+++ b/mmatt-SABnzbd/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app_proxy:
     environment:
       # The format here is: <app-id>_<docker-service-name>_1
-      APP_HOST: mmatt-SABnzbd_sabnzbd_1
+      APP_HOST: mmatt-sabnzbd_sabnzbd_1
       APP_PORT: 8080
 
   server:
