--- a/mmatt-SABnzbd/docker-compose.yml
+++ b/mmatt-SABnzbd/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: mmatt-sabnzbd_sabnzbd_1
+      APP_HOST: mmatt-sabnzbd_server_1
       APP_PORT: 8080
 
   server:
